# evertrust-erp-marketing

./: .dockerignore  .gitignore  CLAUDE.md  CONFIG.md  README.md  START.md  USER_GUIDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  skills-lock.json  tsconfig.base.json
erp-agents/workflows/bazooka/: README.md  pyproject.toml  run_bazooka.sh
erp-agents/workflows/bazooka/bazooka/: auth.py  cli.py  server.py  settings.py
erp-agents/workflows/bazooka/bazooka.egg-info/: PKG-INFO  SOURCES.txt
erp-agents/workflows/bazooka/runs/: 2026-06-12-1055.md  2026-06-12-105604.md  2026-06-12-112524.md  2026-06-12-121739.md  2026-06-15-105926.md  2026-06-15-111519.md  2026-06-15-112043.md  2026-06-15-1418.md  2026-06-15-1556.md  2026-06-15-1604.md  2026-06-16-0937.md  2026-06-16-0952.md  2026-06-16-1040.md  2026-06-16-1052.md  2026-06-16-1053.md  2026-06-16-1107.md  2026-06-16-1108.md  2026-06-16-1143.md  2026-06-16-1342.md  2026-06-16-1343.md  2026-06-16-1349.md  2026-06-16-1359.md  2026-06-16-1540.md  2026-06-16-1608.md  2026-06-16-1611.md  2026-06-16-1613.md  2026-06-17-0712.md  2026-06-17-0718.md  2026-06-17-0724.md
erp-agents/workflows/satellite/: .gitignore  _run_it_cb_germany.py  _run_niche.py  build_geodata.py  pyproject.toml
erp-agents/workflows/satellite/runs/: leads_cybersecurity_germany_wf3-20260622082853.csv  leads_cybersecurity_germany_wf3-20260622082853.json  leads_cybersecurity_germany_wf3-20260622092754.csv  leads_cybersecurity_germany_wf3-20260622092754.json  leads_cybersecurity_germany_wf3-20260622102026.csv  leads_cybersecurity_germany_wf3-20260622102026.json  leads_led_poland_wf3-20260622121409.csv  leads_led_poland_wf3-20260622121409_excluded.csv  leads_led_poland_wf3-20260622130035.csv  leads_led_poland_wf3-20260622130035_excluded.csv  leads_led_poland_wf3-20260622141219.csv  leads_led_poland_wf3-20260622141219_excluded.csv  leads_software-development_germany_wf3-20260622142027.csv  leads_software-development_germany_wf3-20260622142027_excluded.csv
erp-agents/workflows/satellite/satellite/: cli.py  pipeline.py  qualify.py  refine.py  server.py  settings.py
erp-agents/workflows/satellite/satellite/clients/: erp.py  (+3 more)
erp-agents/workflows/satellite/tests/: test_audit_filters.py  test_contact.py  test_country.py  test_filters.py  test_firmographics.py  test_geo.py  test_geodata.py  test_hubs.py  test_icp.py  test_inject.py  test_llm_override.py  test_models.py  test_patch.py  test_progress.py  test_qualify.py  test_render.py  test_route_run.py
erp-server/agents/ammoforge/: pyproject.toml
erp-server/agents/ammoforge/ammoforge/: cli.py  db.py  pipeline.py  server.py  settings.py
erp-server/agents/ammoforge/ammoforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
erp-server/agents/ammoforge/runs/: forge-2026-06-12-185535.md  forge-2026-06-12-221350.md  forge-2026-06-12-221533.md  forge-2026-06-12-222513.md
erp-server/agents/ammoforge/tests/: test_news.py  test_parse.py  test_route_run.py
erp-server/agents/contractmaker/: pyproject.toml  schema_additions.sql
erp-server/agents/contractmaker/contractmaker/: cli.py  db.py  pipeline.py  server.py  settings.py
erp-server/agents/contractmaker/contractmaker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
erp-server/agents/contractmaker/runs/: cm-2026-06-12-220020-evertrustbal.md  cm-2026-06-12-221410-evertrustbal.md  cm-2026-06-12-221551-evertrustbal.md
erp-server/agents/contractmaker/tests/: test_route_run.py
erp-server/agents/crm/: pyproject.toml
erp-server/agents/crm/crm/: cli.py  db.py  pipeline.py  server.py  settings.py
erp-server/agents/crm/crm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
erp-server/agents/crm/runs/: crm-2026-06-12-185735.md  crm-2026-06-12-212758.md  crm-2026-06-12-220027.md  crm-2026-06-12-221413.md  crm-2026-06-12-221557.md  crm-2026-06-15-133801.md
erp-server/agents/crm/tests/: test_state.py
erp-server/agents/glock/: pyproject.toml  seed_replies_demo.py
erp-server/agents/glock/glock/: cli.py  db.py  pipeline.py  server.py  settings.py
erp-server/agents/glock/glock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
erp-server/agents/glock/runs/: glock-2026-06-12-133508.md
erp-server/agents/glock/tests/: test_route_run.py  test_slots.py
erp-server/agents/rag/: pyproject.toml  schema_additions.sql  seed_unsure_demo.py
erp-server/agents/rag/rag/: cli.py  db.py  pipeline.py  server.py  settings.py
erp-server/agents/rag/rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
erp-server/agents/rag/runs/: rag-2026-06-12-172556.md
erp-server/agents/rag/tests/: test_enums.py  test_offline.py  test_parse.py  test_select.py  test_thread.py
erp-server/agents/sales/: pyproject.toml  schema_additions.sql  seed_personas_demo.py
erp-server/agents/sales/runs/: sa-2026-06-12-221552-readai.md  sa-2026-06-12-222553-readai.md
erp-server/agents/sales/sales/: cli.py  db.py  pipeline.py  readai.py  server.py  settings.py
erp-server/agents/sales/sales.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
erp-server/agents/sales/tests/: test_parse.py  test_route_run.py  test_rubric_render_llm.py
erp-server/agents/satellite/: README.md  pyproject.toml  schema_additions.sql
erp-server/agents/satellite/satellite/: cli.py  db.py  emails.py  extract.py  geo.py  keywords.py  pipeline.py  plan.py  profiler.py  recovery.py  serp.py  server.py  settings.py  sitefetch.py  validate.py
erp-server/agents/satellite/satellite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
erp-server/agents/satellite/tests/: test_emails.py  test_geo.py  test_models.py  test_plan.py  test_route_run.py  test_serp_parsers.py  test_validate.py
erp-server/agents/sleeper/: pyproject.toml
erp-server/agents/sleeper/runs/: sleeper-2026-06-12-134540.md  sleeper-2026-06-12-171406.md  sleeper-2026-06-12-171545.md  sleeper-2026-06-12-172537.md  sleeper-2026-06-15-083804.md
erp-server/agents/sleeper/sleeper/: cli.py  db.py  pipeline.py  server.py  settings.py
erp-server/agents/sleeper/sleeper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
erp-server/agents/sleeper/tests/: test_sweep.py
(+1109 files in other folders)
