[project]
name = "ammoforge"
version = "0.1.0"
description = "AMMO FORGE — demand-driver news intel + template forge (port of n8n WfBtXiyyFq8Ktr9P)"
requires-python = ">=3.11"
dependencies = ["psycopg[binary]>=3.1"]

[project.optional-dependencies]
live = ["openai>=1.30"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["ammoforge*"]
