[project]
name = "contractmaker"
description = "ContractMaker — ERP-native contract generation (mirrors n8n ContractMaker (PG) wZWcjzx7fSbbsT7c)"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
# Only needed for live extraction + Google Docs/Drive PDF — dry/--no-llm works without these.
live = ["openai>=1.30", "google-api-python-client>=2.120", "google-auth-oauthlib>=1.2"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["contractmaker*"]
