[project]
name = "crm"
description = "CRM Customer — ERP-native intake + graduation (mirrors n8n CRM Customer (PG) vNCqzVjOOhSD2Czb)"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["crm*"]
