[project]
name = "rag"
description = "RAG AGENT — ERP-native unsure-reply drafter (mirrors n8n RAG AGENT (PG) ffd3c2uRgkMLFaxT)"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
# Only needed for real drafting — --no-llm offline path works without these.
live = ["openai>=1.30"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["rag*"]
