[project]
name = "sales"
description = "SALES AGENT — ERP-native Hormozi-lens meeting coach (mirrors n8n SALES AGENT (PG) OUNbboRQNqch5USk)"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
# Only needed for the real coach — --no-llm offline path works without these.
live = ["openai>=1.30"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["sales*"]
