[project]
name = "satellite"
version = "0.1.0"
description = "LEAD SATELLITE — lead research pipeline (Python port of n8n workflow wKMX2cvDKlAc7p0N V2)"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
llm = ["openai>=1.30"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["satellite*"]
